create get task list
